[ CineLog / Navigation ] WIP:   - create a navigation   - rewrite activity_main layout and class   - start to remove old activities, and to use fragments instead

--- a/app/src/main/res/layout/activity_add_kino.xml
+++ b/app/src/main/res/layout/activity_add_kino.xml
@@ -21,8 +21,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".android.activities.add.AddKino">
+    android:fitsSystemWindows="true">
 
     <include android:id="@+id/add_kino_toolbar" layout="@layout/toolbar" />
     <include android:id="@+id/add_kino_content" layout="@layout/content_add_review" />
