--- a/app/src/main/res/layout/toolbar_new.xml
+++ b/app/src/main/res/layout/toolbar_new.xml
@@ -23,7 +23,7 @@
     android:layout_height="wrap_content"
     android:background="?attr/colorSurface">
 
-    <com.google.android.material.appbar.MaterialToolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -33,10 +33,4 @@
         app:subtitleTextColor="?attr/colorPrimary"
         app:titleTextColor="?attr/colorPrimary" />
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabGravity="fill"
-        app:tabMode="fixed" />
 </com.google.android.material.appbar.AppBarLayout>
