--- a/app/src/main/res/layout/fragment_serie.xml
+++ b/app/src/main/res/layout/fragment_serie.xml
@@ -16,6 +16,7 @@
  along with CineLog. If not, see <https://www.gnu.org/licenses/>.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_movie"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
