--- a/app/src/main/res/layout/fragment_serie.xml
+++ b/app/src/main/res/layout/fragment_serie.xml
@@ -16,6 +16,7 @@
  along with CineLog. If not, see <https://www.gnu.org/licenses/>.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fragment_movie"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,5 +28,13 @@
         android:dividerHeight="0dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@drawable/add_kino" />
 
 </LinearLayout>
