--- a/app/src/main/res/layout/content_edit_review.xml
+++ b/app/src/main/res/layout/content_edit_review.xml
@@ -16,217 +16,232 @@
  You should have received a copy of the GNU General Public License
  along with CineLog. If not, see <https://www.gnu.org/licenses/>.
 -->
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_add_review"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".android.activities.EditReview"
-    tools:showIn="@layout/activity_edit_review">
+    android:fitsSystemWindows="true">
 
-    <LinearLayout
-        android:id="@+id/view_kino_layout"
+    <ScrollView
+        android:id="@+id/content_add_review"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical"
-        android:paddingBottom="100dp">
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
-            android:id="@+id/view_kino_title_layout"
+            android:id="@+id/view_kino_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="start"
             android:orientation="vertical"
-            android:paddingLeft="10dp"
-            android:paddingTop="5dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="0dp">
+            android:paddingBottom="100dp">
 
-            <TextView
-                android:id="@+id/view_kino_title_readonly"
-                style="@style/TextAppearance.AppCompat.Large"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/view_kino_title_layout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textStyle="bold" />
+                android:gravity="start"
+                android:orientation="vertical"
+                android:paddingLeft="10dp"
+                android:paddingTop="5dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="0dp">
 
-            <EditText
-                android:id="@+id/view_kino_title_edit"
-                style="@style/TextAppearance.AppCompat.Large"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:inputType="text"
-                android:textStyle="bold"
-                android:visibility="gone" />
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/view_kino_title_readonly"
+                    style="@style/TextAppearance.AppCompat.Large"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold" />
 
-        <LinearLayout
-            android:id="@+id/view_kino_review_content_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingLeft="10dp"
-            android:paddingTop="10dp"
-            android:paddingRight="10dp">
+                <EditText
+                    android:id="@+id/view_kino_title_edit"
+                    style="@style/TextAppearance.AppCompat.Large"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:inputType="text"
+                    android:textStyle="bold"
+                    android:visibility="gone" />
+            </LinearLayout>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
+            <LinearLayout
+                android:id="@+id/view_kino_review_content_layout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="7dp"
-                android:layout_marginTop="3dp"
-                android:layout_marginRight="7dp"
-                android:layout_marginBottom="3dp"
-                app:cardCornerRadius="5dp"
-                app:cardElevation="2dp"
-                app:cardMaxElevation="2dp">
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingLeft="10dp"
+                android:paddingTop="10dp"
+                android:paddingRight="10dp">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    tools:ignore="RtlSymmetry"
-                    android:paddingTop="10dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/rating"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:textStyle="bold" />
+                <androidx.cardview.widget.CardView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginRight="7dp"
+                    android:layout_marginBottom="3dp"
+                    android:layout_weight="0.5"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="2dp"
+                    app:cardMaxElevation="2dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:orientation="horizontal"
-                        android:paddingLeft="5dp"
-                        android:paddingRight="5dp">
+                        android:orientation="vertical"
+                        android:paddingLeft="10dp"
+                        android:paddingTop="10dp"
+                        android:paddingRight="10dp"
+                        tools:ignore="RtlSymmetry">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/rating"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:textStyle="bold" />
 
                         <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_weight="0.5"
+                            android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:gravity="center_vertical"
-                            android:orientation="vertical"
-                            android:paddingEnd="10dp"
-                            tools:ignore="RtlSymmetry">
+                            android:gravity="center"
+                            android:orientation="horizontal"
+                            android:paddingLeft="5dp"
+                            android:paddingRight="5dp">
 
-                            <TextView
-                                android:id="@+id/review_edit_rating_bar_as_text"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:gravity="start"
-                                android:textAppearance="?android:attr/textAppearanceLarge"
-                                android:textColor="?attr/colorPrimary" />
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.5"
+                                android:gravity="center_vertical"
+                                android:orientation="vertical"
+                                android:paddingEnd="10dp"
+                                tools:ignore="RtlSymmetry">
 
-                            <TextView
-                                android:id="@+id/review_edit_rating_bar_max_as_text"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:gravity="start"
-                                android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textColor="?attr/colorPrimaryVariant" />
+                                <TextView
+                                    android:id="@+id/review_edit_rating_bar_as_text"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="start"
+                                    android:textAppearance="?android:attr/textAppearanceLarge"
+                                    android:textColor="?attr/colorPrimary" />
+
+                                <TextView
+                                    android:id="@+id/review_edit_rating_bar_max_as_text"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="start"
+                                    android:textAppearance="?android:attr/textAppearanceMedium"
+                                    android:textColor="?attr/colorPrimaryVariant" />
+                            </LinearLayout>
+
+
+                            <NumberPicker
+                                android:id="@+id/rating_picker"
+                                android:layout_width="0dp"
+                                android:layout_height="110dp"
+                                android:layout_weight="0.5"
+                                android:gravity="end"
+                                android:paddingStart="10dp"
+                                tools:ignore="RtlSymmetry" />
                         </LinearLayout>
-
-
-                        <NumberPicker
-                            android:id="@+id/rating_picker"
-                            android:layout_width="0dp"
-                            android:layout_weight="0.5"
-                            android:layout_height="110dp"
-                            android:paddingStart="10dp"
-                            android:gravity="end"
-                            tools:ignore="RtlSymmetry" />
                     </LinearLayout>
-                </LinearLayout>
 
-            </androidx.cardview.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="7dp"
-                android:layout_marginTop="3dp"
-                android:layout_marginRight="7dp"
-                android:layout_marginBottom="3dp"
-                android:layout_weight="0.5"
-                app:cardCornerRadius="5dp"
-                app:cardElevation="2dp"
-                app:cardMaxElevation="2dp">
-
-                <RelativeLayout
-                    android:id="@+id/view_kino_review_review_date_layout"
-                    android:layout_width="match_parent"
+                <androidx.cardview.widget.CardView
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:padding="10dp">
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginRight="7dp"
+                    android:layout_marginBottom="3dp"
+                    android:layout_weight="0.5"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="2dp"
+                    app:cardMaxElevation="2dp">
 
-                    <TextView
-                        android:id="@+id/view_kino_review_review_date_label"
+                    <RelativeLayout
+                        android:id="@+id/view_kino_review_review_date_layout"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/view_kino_review_review_date_label_value"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:textStyle="bold"/>
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:padding="10dp">
 
-                    <Button
-                        android:id="@+id/kino_review_date_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:gravity="center_vertical"
-                        android:text="@string/review_change_reviewdate"
-                        tools:ignore="RelativeOverlap" />
-                </RelativeLayout>
+                        <TextView
+                            android:id="@+id/view_kino_review_review_date_label"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/view_kino_review_review_date_label_value"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:textStyle="bold" />
 
-            </androidx.cardview.widget.CardView>
+                        <Button
+                            android:id="@+id/kino_review_date_button"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:gravity="center_vertical"
+                            android:text="@string/review_change_reviewdate"
+                            tools:ignore="RelativeOverlap" />
+                    </RelativeLayout>
 
-        </LinearLayout>
+                </androidx.cardview.widget.CardView>
 
-        <LinearLayout
-            android:id="@+id/view_kino_review_review_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="20dp">
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/view_kino_review_review_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/view_kino_review_review_label_value"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/kino_review_text"
+            <LinearLayout
+                android:id="@+id/view_kino_review_review_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/review_hint"
-                android:inputType="text|textMultiLine" />
-        </LinearLayout>
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="20dp">
 
-        <LinearLayout
-            android:id="@+id/view_kino_review_tags_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="20dp">
-            <Button
-                android:id="@+id/review_tag_edit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:text="@string/review_edit_tags"
-                tools:ignore="RelativeOverlap" />
+                <TextView
+                    android:id="@+id/view_kino_review_review_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/view_kino_review_review_label_value"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/kino_review_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/review_hint"
+                    android:inputType="text|textMultiLine" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/view_kino_review_tags_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="20dp">
+
+                <Button
+                    android:id="@+id/review_tag_edit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:text="@string/review_edit_tags"
+                    tools:ignore="RelativeOverlap" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-</ScrollView>
+    </ScrollView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/save_kino" />
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
