--- a/app/src/main/res/layout/content_kino_view_unregistered.xml
+++ b/app/src/main/res/layout/content_kino_view_unregistered.xml
@@ -16,61 +16,78 @@
  You should have received a copy of the GNU General Public License
  along with CineLog. If not, see <https://www.gnu.org/licenses/>.
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:fitsSystemWindows="true">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/view_kino_tmdb_image_title_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/view_kino_tmdb_image_layout"
-            style="@style/Widget.AppCompat.RatingBar.Small"
-            android:layout_width="150dp"
-            android:layout_height="200dp"
-            android:adjustViewBounds="true"
-            android:animateLayoutChanges="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/noimage_purple" />
+        android:layout_height="match_parent"
+        android:gravity="start"
+        android:orientation="vertical">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/view_kino_tmdb_title_layout"
+            android:id="@+id/view_kino_tmdb_image_title_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:animateLayoutChanges="true"
-            android:gravity="start"
-            android:orientation="vertical"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp">
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/view_kino_tmdb_title"
-                style="@style/TextAppearance.AppCompat.Large"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="textStart"
-                android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/view_kino_tmdb_image_layout"
+                style="@style/Widget.AppCompat.RatingBar.Small"
+                android:layout_width="150dp"
+                android:layout_height="200dp"
+                android:adjustViewBounds="true"
+                android:animateLayoutChanges="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/noimage_purple" />
 
-            <TextView
-                android:id="@+id/view_kino_tmdb_year"
-                style="@style/TextAppearance.AppCompat.Medium"
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/view_kino_tmdb_title_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="textStart" />
+                android:layout_height="match_parent"
+                android:animateLayoutChanges="true"
+                android:gravity="start"
+                android:orientation="vertical"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp">
+
+                <TextView
+                    android:id="@+id/view_kino_tmdb_title"
+                    style="@style/TextAppearance.AppCompat.Large"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="textStart"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/view_kino_tmdb_year"
+                    style="@style/TextAppearance.AppCompat.Medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="textStart" />
+            </LinearLayout>
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/view_kino_tmdb_overview"
+            style="@style/TextAppearance.AppCompat.Small"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="7dp"
+            android:textAlignment="textStart" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/view_kino_tmdb_overview"
-        style="@style/TextAppearance.AppCompat.Small"
-        android:layout_width="match_parent"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="7dp"
-        android:textAlignment="textStart" />
-</LinearLayout>
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@drawable/add_review" />
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
