--- a/app/src/main/res/layout/fragment_review_serie_item.xml
+++ b/app/src/main/res/layout/fragment_review_serie_item.xml
@@ -36,7 +36,7 @@
             app:tabMode="fixed" />
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.viewpager.widget.ViewPager
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/serie_view_pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
